--- a/.github/workflows/coverity_ci_scan.yml
+++ b/.github/workflows/coverity_ci_scan.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 
 jobs:
   coverity:
-    runs-on: gasp
+    runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v2
     - name: repo checkout
