--- a/.github/workflows/coverity_ci_scan.yml
+++ b/.github/workflows/coverity_ci_scan.yml
@@ -12,10 +12,11 @@ jobs:
       uses: intel-innersource/frameworks.actions.abi-coverity-scan@<release_version>
       with:
           stream: "ABI_TestingCoverity-Plugin"
-          scan_username: "sowndar"
-          scan_password: ""
+          scan_username: ${{ coverity_scan.COVR_USER }}
+          scan_password: ${{ coverity_scan.COVR_PWD }}
     - name: Print Environment Variables
       run: env | sort
+        echo $coverity_scan.COVR_PWD
     # - name: config
     #   run: CC=gcc ./config --banner=Configured --debug enable-fips enable-rc5 enable-md2 enable-ssl3 enable-nextprotoneg enable-ssl3-method enable-weak-ssl-ciphers enable-zlib enable-ec_nistp_64_gcc_128 no-shared enable-buildtest-c++ enable-external-tests -DPEDANTIC -DFUZZING_BUILD_MODE_UNSAFE_FOR_PRODUCTION
     # - name: config dump
