--- a/.github/workflows/coverity_ci_scan.yml
+++ b/.github/workflows/coverity_ci_scan.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - name: "ABI Coverity Scan"
       id: "ABICoverityScan"
-      uses: intel-innersource/frameworks.actions.abi-coverity-scan@<release_version>
+      uses: intel-innersource/frameworks.actions.abi-coverity-scan@v2.4.0
       with:
           stream: "ABI_TestingCoverity-Plugin"
           scan_username: ${{ secrets.COVR_USER }}
